[tool.poetry]
name = "mole-ai"
version = "0.1.0"
description = ""
authors = ["Dmitri Pisarev <dimaip@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
llama-index = "^0.10.65"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
